--- a/src/main/resources/templates/kinder/schoolLunch/schoolLunch-edit.html
+++ b/src/main/resources/templates/kinder/schoolLunch/schoolLunch-edit.html
@@ -19,7 +19,7 @@
 																								<div class="form-group">
 								<label class="col-sm-3 control-label">菜品口味：</label>
 								<div class="col-sm-8">
-									<input id="aStudentNo" name="aStudentNo" th:value="${schoolLunch.aStudentNo}" class="form-control" type="text">
+									<input id="slTaste" name="slTaste" th:value="${schoolLunch.slTaste}" class="form-control" type="text">
 								</div>
 							</div>
 																								<div class="form-group">
